# ChessGame

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build.yml
scripts/: build.sh  test.sh
src/: Axis.h  Bishop.h  BishopMovementSkill.cpp  BishopMovementSkill.h  ChessGame.h  ChessSkill.cpp  ChessSkill.h  Coordinate.h  Coordinate.hpp  GameRunner.hpp  IGame.h  King.h  KingMovementSkill.cpp  KingMovementSkill.h  Knight.h  KnightMovementSkill.cpp  KnightMovementSkill.h  Rook.h  RookMovementSkill.cpp  RookMovementSkill.h
test/: CMakeLists.txt  GameTest.cpp  chess_bishop_test.cpp  chess_king_test.cpp  chess_knight_test.cpp  chess_rook_test.cpp  coordinates_test.cpp  game_runner_test.cpp
test/fixtures/: ChessPieceMovementTest.hpp  ChessTest.hpp
test/mocks/: MockGame.hpp
